portfolio/css/theme.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');

:root {
    --color-bg: #000; 
    --color-one: #fff;
    --color-two: #FFBD39;
    --color-three: #999;
    --font: "Inter", sans-serif;
}

body {
    font-family: var(--font);
    background-color: var(--color-bg);
    color: var(--color-one);
    font-size: 15px;
    overflow-x: hidden;
}

.container {
    width: 100%;
    max-width: 1200px;
    margin: 0 auto;
    padding: 30px 20px;
    display: flex;
    flex-direction: column;
    gap: 80px;
}

@media (max-width: 1200px){
    .container {
        max-width: 960px;
    }
}

@media (max-width: 992px){
    body {
        font-size: 14px;
    }

    .container {
        max-width: 840px;
    }
}

@media (max-width: 768px){
    body {
        font-size: 13px;
    }

    .container {
        max-width: 720px;
    }
}

@media (max-width: 576px) {
    .container {
        max-width: 460px;
        gap: 70px; 
    }
}

@media (max-width: 426px) {
    .container {
        max-width: 380px;
    }
}

@media (max-width: 376px) {
    .container {
        max-width: 320px;
    }
}

@media (max-width: 320px) {
    .container {
        max-width: 300px;
        gap: 60px;
    }
}

